crates/swc_ecma_parser/tests/test262-error-references/fail/8a5edab282632443.js.stderr
error: Unterminated regexp literal
 --> $DIR/tests/test262-parser/fail/8a5edab282632443.js:1:1
  |
1 | /
  | ^

